[package]
name = "tle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.1"
clap = { version = "4.5.4", features = ["derive"] }
md5 = "0.7.0"
ntp = "0.5.0"
rand = "0.8.5"
soft-aes = "0.2.2"
